@@ -1,3 +1,15 @@
+2012-05-15  Bin Cheng  <bin.cheng@arm.com>
+
+	Backport r187139 from mainline.
+	2012-05-04  Bin Cheng  <bin.cheng@arm.com>
+
+	PR rtl-optimization/52804
+	* reload1.c (reload_reg_reaches_end_p): Check whether successor
+	reload with type RELOAD_FOR_INPUT_ADDRESS kills reload register
+	of current one with type RELOAD_FOR_INPADDR_ADDRESS.
+	Same stands for reloads with type RELOAD_FOR_OUTPUT_ADDRESS and
+	RELOAD_FOR_OUTADDR_ADDRESS.
+
 2012-05-14  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/46098
